--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minesweeper</title>
+    <title>Minesweeper - Online modern edition</title>  
+<meta name="description" content= "A modernized version of minesweeper. Play it online without any downloads for free." />
+<meta name="robots" content= "index, follow">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
