--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Minesweeper - Online modern edition</title>  
 <meta name="description" content= "A modernized version of minesweeper. Play it online without any downloads for free." />
 <meta name="robots" content= "index, follow">
+<meta name="google-site-verification" content="ZgJbG9OWPSPLJmqYYs9mNF8uCEMDaBqn-RsEfmaaIXE" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
