--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="cpu7kCjAvir10X-BszrFPTQtTFKVZAY9J5msIdCRYdA" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minesweeper - Online modern edition</title>  
 <meta name="description" content= "A modernized version of minesweeper. Play it online without any downloads for free." />
